tracker-extract-3 crashed with SIGSEGV in decorator_item_cache_remove()
Stack trace
#0 0x00007ffa288715b8 in decorator_item_cache_remove (decorator=0x55eaf64f6fe0, id=1076) at ../src/libtracker-miner/tracker-decorator.c:727 info = priv = 0x55eaf64f6f10 item = 0x19535fe4a83256cd #1 notifier_events_cb (decorator=0x55eaf64f6fe0, service=, graph=, events=0x55eaf64f8760, notifier=) at ../src/libtracker-miner/tracker-decorator.c:880 event = priv = 0x55eaf64f6f10 check_added = 0 id = 1076 i = 0 #2 0x00007ffa282168b6 in ffi_call_unix64 () at ../src/x86/unix64.S:104 No locals. #3 0x00007ffa2821334d in ffi_call_int (cif=cif@entry=0x7ffe195f70d0, fn=, rvalue=, avalue=, closure=closure@entry=0x0) at ../src/x86/ffi64.c:673 classes = {X86_64_INTEGER_CLASS, 32766, 673258156, 32762} stack = argp = 0x7ffe195f6e70 "" arg_types = gprcount = 5 ssecount = ngpr = 1 nsse = 0 i = avn = flags = reg_args = #4 0x00007ffa28215f33 in ffi_call (cif=cif@entry=0x7ffe195f70d0, fn=fn@entry=0x7ffa28871520 , rvalue=rvalue@entry=0x7ffe195f7050, avalue=avalue@entry=0x7ffe195f6ff0) at ../src/x86/ffi64.c:710 arg_types = 0x7ffe195f7020 i = nargs = 5 max_reg_struct_size = #5 0x00007ffa284d5163 in g_cclosure_marshal_generic (closure=, return_gvalue=, n_param_values=, param_values=, invocation_hint=, marshal_data=) at ../../../gobject/gclosure.c:1536 rtype = rvalue = 0x7ffe195f7050 n_args = atypes = args = i = cif = {abi = FFI_UNIX64, nargs = 5, arg_types = 0x7ffe195f7020, rtype = 0x7ffa282171a0 , bytes = 0, flags = 0} cc = enum_tmpval = tmpval_used = 0 #6 0x00007ffa284cf010 in g_closure_invoke (closure=0x55eaf65c9c50, return_value=0x0, n_param_values=4, param_values=0x7ffe195f72d0, invocation_hint=0x7ffe195f7250) at ../../../gobject/gclosure.c:832 marshal = 0x7ffa284d4ce0 marshal_data = 0x0 in_marshal = 0 real_closure = 0x55eaf65c9c30 __func__ = "g_closure_invoke" #7 0x00007ffa284fc3d6 in signal_emit_unlocked_R.isra.0 (node=node@entry=0x7ffa18007670, detail=detail@entry=0, instance=instance@entry=0x55eaf65c9430, emission_return=emission_return@entry=0x0, instance_and_params=instance_and_params@entry=0x7ffe195f72d0) at ../../../gobject/gsignal.c:3802 tmp = handler = 0x55eaf65c9f70 accumulator = 0x0 emission = {next = 0x0, instance = 0x55eaf65c9430, ihint = {signal_id = 107, detail = 0, run_type = (G_SIGNAL_RUN_FIRST | G_SIGNAL_ACCUMULATOR_FIRST_RUN)}, state = EMISSION_RUN, chain_type = 4} class_closure = 0x55eaf65c6e00 hlist = handler_list = 0x55eaf65c9f70 return_accu = 0x0 accu = {g_type = 0, data = {{v_int = 0, v_uint = 0, v_long = 0, v_ulong = 0, v_int64 = 0, v_uint64 = 0, v_float = 0, v_double = 0, v_pointer = 0x0}, {v_int = 0, v_uint = 0, v_long = 0, v_ulong = 0, v_int64 = 0, v_uint64 = 0, v_float = 0, v_double = 0, v_pointer = 0x0}}} signal_id = 107 max_sequential_handler_number = 353 return_value_altered = EMIT_RESTART = #8 0x00007ffa284ec69a in g_signal_emit_valist (instance=, signal_id=, detail=, var_args=var_args@entry=0x7ffe195f74c0) at ../../../gobject/gsignal.c:3555 instance_and_params = 0x7ffe195f72d0 signal_return_type = param_values = 0x7ffe195f72e8 node = i = n_params = __func__ = "g_signal_emit_valist" #9 0x00007ffa284ec923 in g_signal_emit (instance=, signal_id=, detail=detail@entry=0) at ../../../gobject/gsignal.c:3612 var_args = {{gp_offset = 48, fp_offset = 48, overflow_arg_area = 0x7ffe195f75a0, reg_save_area = 0x7ffe195f74e0}} #10 0x00007ffa2840b5c0 in tracker_notifier_emit_events (cache=0x55eaf64dc7f0) at ../src/libtracker-sparql/tracker-notifier.c:367 events = 0x55eaf64f8760 service = 0x0 #11 0x00007ffa2874836f in g_main_dispatch (context=0x55eaf62a1bd0) at ../../../glib/gmain.c:3460 dispatch = 0x7ffa28745330 prev_source = 0x0 begin_time_nsec = 0 was_in_call = 0 user_data = 0x55eaf64dc7f0 callback = 0x7ffa2840b520 cb_funcs = cb_data = 0x7ffa10008240 need_destroy = source = 0x7ffa100097d0 current = 0x55eaf62ab010 i = 0 current = i = __func__ = source = _g_boolean_var_163 = was_in_call = user_data = callback = cb_funcs = cb_data = need_destroy = dispatch = prev_source = begin_time_nsec = _g_boolean_var_164 = #12 g_main_context_dispatch (context=0x55eaf62a1bd0) at ../../../glib/gmain.c:4200 No locals. #13 0x00007ffa287a3178 in g_main_context_iterate.constprop.0 (context=0x55eaf62a1bd0, block=, dispatch=1, self=) at ../../../glib/gmain.c:4276 max_priority = 2147483647 timeout = 30430 some_ready = 1 nfds = allocated_nfds = 2 fds = 0x55eaf64d5a20 begin_time_nsec = 0 #14 0x00007ffa28747bdf in g_main_loop_run (loop=0x55eaf64d29e0) at ../../../glib/gmain.c:4479 self = __func__ = "g_main_loop_run" #15 0x000055eaf544384a in main (argc=, argv=) at ../src/tracker-extract/tracker-main.c:497 context = error = 0x0 extract = 0x55eaf62bb060 decorator = 0x55eaf64f6fe0 controller = 0x55eaf64d4260 my_main_loop = connection = 0x55eaf62a1410 proxy = 0x55eaf64d23c0 sparql_connection = 0x55eaf64fe360 domain_ontology = 0x55eaf628dca0 dbus_name = miner_dbus_name = cache_dir =
This is the most common crash in all of Ubuntu 23.04 at the moment.
https://launchpad.net/bugs/2012638